--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,8 @@
     font-weight: normal;
 }
 
+
+
 .carousel-control-prev {
     width: 60px;
     height: 60px;
@@ -54,13 +56,12 @@
 }
 
 .containertercermenu {
-    padding-left: 13%;
-    padding-right: 12%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .tercermenu {
     background: #fff;
-    padding-top: 10px;
 }
 
 .tercermenu a {
@@ -70,21 +71,28 @@
 }
 
 
-
-
-.botonrosa {
+.cajacol {
     background-color: #F5B6CD;
 }
 
 
 .Inversionvirtual {
     background-color: #f5b6cd;
-    width: 50%;
+    width: 45%;
 
 }
 
-.invirutal {
-    padding-left: 0%;
+.invirtualimg {
+    width: 502px;
+    text-align: left;
+}
+
+.textinvirtual {
+    padding-left: 20px;
+}
+
+.Inversionvirtual h6 {
+    padding-top: 20px;
 }
 
 .flypass {
@@ -93,18 +101,137 @@
     margin-left: 20px;
 }
 
+.flypass h6 {
+    padding-top: 10px;
+}
+
+.Flypassimg {
+    width: 279px;
+}
+
 .tu360movilidad {
     background-color: #fdda24;
     width: 25%;
     margin-left: 20px;
 }
 
+.tu360movilidad h6 {
+    padding-top: 15px;
+}
+
+.tu360movilidadimg {
+    width: 279px;
+}
+
 .botonrecomendaciones {
     border-radius: 40px;
     border: 1px solid #2C2A29;
     background: transparent;
+    font-weight: 600;
+    margin: 10px 15px;
 }
 
+.preguntas-frecuentes {
+    background-color: #ffffff;
+    padding: 60px 0px 40px;
+}
+
+.preguntas {
+    background-color: #FF7F41;
+}
+
+.preguntas label {
+    padding-left: 20px;
+    padding-top: 20px;
+    font-size: 14px;
+    font-weight: normal;
+    font-family: sans-serif;
+    letter-spacing: -0.2px;
+    line-height: 18px;
+
+}
+
+.preguntas h3 {
+    padding-left: 20px;
+    padding-bottom: 40px;
+    font-size: 28px;
+    line-height: 30px;
+    font-family: sans-serif;
+    letter-spacing: -0.6px;
+    font-weight: 700;
+}
+
+.preguntas a {
+    display: inline-block;
+    border: 1px solid #2c2a29;
+    border-radius: 40px;
+    color: #2c2a29;
+    line-height: 21px;
+    padding: 8px 10px;
+    bottom: 33px;
+    text-decoration: none;
+}
+
+.botonpreguntas {
+    bottom: 33px;
+}
+
+.imgbancoojo {
+    width: 329px;
+    height: 335px;
+}
+
+
+.listapreguntas {
+    height: 300px;
+    margin-bottom: 30px;
+}
+
+.preguntasfrecuentes {
+    display: flex;
+    flex-direction: row;
+    border-top: 1px solid #2c2a29;
+    height: 68px;
+    justify-content: space-between;
+    align-items: center;
+    color: #2c2a29;
+}
+
+.todaslaspreguntas {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.3px;
+    text-decoration: underline;
+    color: #2c2a29;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+.creditos {
+    background-color: #ffffff;
+    width: 45%;
+}
+
+.tarjetas {
+    background-color: #ffffff;
+    width: 25%;
+    margin-left: 20px;
+}
+
+.seguros {
+    background-color: #ffffff;
+    width: 25%;
+    margin-left: 20px;
+}
+    
 .oferta {
     width: 550px;
 }
